--- a/index.html
+++ b/index.html
@@ -7,7 +7,18 @@
     <title>layout</title>
 </head>
 <body>
-  <header></header>
+  <header>
+    <div class ="logo"></div>
+    <nav class = "menu">
+        <ul>
+            <li><a href="#">home</a></li>
+            <li><a href="#">sobre</a></li>
+            <li><a href="#">preços</a></li>
+            <li><a href="#">contatos</a></li>
+            <li><a href="#">ajuda</a></li>
+        </ul>
+    </nav>  
+</header>
   <main></main>  
   <footer></footer>
 </body>
