--- a/index.html
+++ b/index.html
@@ -2,27 +2,38 @@
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style.css">
-    <title>layout</title>
+    <title>Layout</title>
 </head>
 <body>
-  <header>
-    <div class ="logo"></div>
-    <nav class = "menu">
-        <ul>
-            <li><a href="#">home</a></li>
-            <li><a href="#">sobre</a></li>
-            <li><a href="#">preços</a></li>
-            <li><a href="#">contatos</a></li>
-            <li><a href="#">ajuda</a></li>
-        </ul>
-    </nav>  
-</header>
-  <main>
-    <div class="conteudo"></div>
-   <div class="destaque"></div>
-  </main>  
-  <footer></footer>
+    <header>
+        <div class="logo"></div>
+        <nav class="menu">
+            <ul>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">Sobre</a></li>
+                <li><a href="#">Preços</a></li>
+                <li><a href="#">Contatos</a></li>
+                <li><a href="#">Ajuda</a></li>
+            </ul>
+        </nav>
+    </header>
+    <main>
+        <div class="conteudo">
+            <h1>Titulo focado no produto para divulgar</h1>
+            <p>Descrever de forrma breve e drireto o que é seu produto, para quem ele é e o que torna ele tão especial</p>
+            <div class="acao">
+                <button><a href="#">Botão</a></button>
+            </div>
+            <div class="social">
+                <div></div>
+                <div></div>
+                <div></div>
+            </div>            
+        <div class="destaque"></div>
+    </main>
+    <footer></footer>
 </body>
 </html>
