--- a/index.html
+++ b/index.html
@@ -34,6 +34,8 @@
             </div>            
         <div class="destaque"></div>
     </main>
-    <footer></footer>
+    <footer>
+        Felipe Bahia
+    </footer>
 </body>
 </html>
