--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>Layout</title>
 </head>
 <body>
+
     <header>
         <div class="logo"></div>
         <nav class="menu">
@@ -22,16 +23,17 @@
     </header>
     <main>
         <div class="conteudo">
-            <h1>Titulo focado no produto para divulgar</h1>
-            <p>Descrever de forrma breve e drireto o que é seu produto, para quem ele é e o que torna ele tão especial</p>
+            <h1>compre nosso novo tenis de futsal da JOMA</h1>
+            <p>Lancamento novo, top flex rebound branca e preta com amortecimento avançado, garanta já a sua.</p>
             <div class="acao">
-                <button><a href="#">Botão</a></button>
+                <button><a href="https://www.joma.com.br/chuteira-de-futsal-joma-top-flex-rebound-branco-preto-dourado/p">Botão</a></button>
             </div>
             <div class="social">
-                <div></div>
-                <div></div>
+                <div class="a"></div>
+                <div class="b"></div>
                 <div></div>
             </div>            
+        </div>
         <div class="destaque"></div>
     </main>
     <footer>
